--- a/services/contact-service/pom.xml
+++ b/services/contact-service/pom.xml
@@ -30,6 +30,12 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fabricmanagement</groupId>
+            <artifactId>shared-infrastructure</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Shared Security -->
         <dependency>
             <groupId>com.fabricmanagement</groupId>
