feat(security): implement production-ready authentication security enhancements
BREAKING CHANGES: None (all changes are backward compatible)

Major Security Improvements:
━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

1. API Gateway Security (CRITICAL)
   - Implement JWT authentication filter with reactive WebFlux
   - Add public/protected endpoint separation
   - Fix critical security vulnerability (.anyExchange().permitAll())
   - Add X-Tenant-Id and X-User-Id header injection to downstream requests
   - Order: -100 (high priority filter execution)

2. Rate Limiting - Endpoint-Specific (CRITICAL)
   - /auth/check-contact: 10 req/min (email enumeration prevention)
   - /auth/login: 5 req/min (brute force prevention)
   - /auth/setup-password: 3 req/min (strict one-time operation)
   - /contacts/find-by-value: 5 req/min (internal endpoint protection)
   - Redis-based distributed rate limiting

3. Login Attempt Tracking (HIGH PRIORITY)
   - Add LoginAttemptService with Redis-based distributed tracking
   - 5 failed attempts → 15 min account lockout
   - Automatic unlock after lockout period
   - Successful login clears attempt counter
   - Fully configurable via application.yml

4. Password Setup Validation (IMPORTANT)
   - Add contact verification requirement (isVerified check)
   - Validate user status (PENDING_VERIFICATION or ACTIVE)
   - Prevent password setup for deleted/suspended users
   - Add comprehensive validation chain (5 layers)

5. Custom Exception Handling (IMPORTANT)
   - Create domain exception hierarchy (8 custom exceptions)
   - Add GlobalExceptionHandler for consistent error responses
   - Implement proper HTTP status codes (401, 403, 404, 409, 500)
   - Security-conscious error messages (no sensitive data leakage)
   - Handle Feign client exceptions gracefully

6. Response Time Masking (SECURITY)
   - Implement timing attack prevention (200ms minimum response)
   - Apply to /check-contact endpoint
   - Prevent user enumera

--- a/.env.example
+++ b/.env.example
@@ -83,6 +83,19 @@ JWT_EXPIRATION=3600000           # 1 hour in milliseconds (production: 15 min re
 JWT_REFRESH_EXPIRATION=86400000  # 24 hours in milliseconds (production: 7 days max)
 JWT_ALGORITHM=HS256              # HMAC SHA-256 (HS256, HS384, HS512)
 JWT_ISSUER=fabric-management-system
+
+# =============================================================================
+# SECURITY CONFIGURATION
+# =============================================================================
+# Login Attempt Tracking
+SECURITY_LOGIN_ATTEMPT_MAX_ATTEMPTS=5                  # Max failed login attempts before lockout
+SECURITY_LOGIN_ATTEMPT_LOCKOUT_DURATION_MINUTES=15    # Account lockout duration (minutes)
+
+# Response Time Masking (Timing Attack Prevention)
+SECURITY_RESPONSE_TIME_MASKING_MIN_MS=200             # Minimum response time (milliseconds)
+
+# =============================================================================
+# SECURITY - JWT
 JWT_AUDIENCE=fabric-api
 
 # =============================================================================
