--- a/services/api-gateway/src/main/resources/application.yml
+++ b/services/api-gateway/src/main/resources/application.yml
@@ -22,9 +22,92 @@ spring:
   cloud:
     gateway:
       routes:
-        # User Service - Public Auth Routes (No Rate Limiting)
-        # Pattern: /api/v1/users/auth/** - Authentication endpoints
-        # Gateway strips /api/v1/users, forwards /auth/** to service
+        # User Service - Auth Check Contact (Public - Aggressive Rate Limiting)
+        # Pattern: /api/v1/users/auth/check-contact
+        - id: user-service-auth-check
+          uri: ${USER_SERVICE_URL:http://localhost:8081}
+          predicates:
+            - Path=/api/v1/users/auth/check-contact
+          filters:
+            - StripPrefix=3
+            - name: CircuitBreaker
+              args:
+                name: userServiceCircuitBreaker
+                fallbackUri: forward:/fallback/user-service
+            - name: RequestRateLimiter
+              args:
+                key-resolver: "#{@smartKeyResolver}"
+                redis-rate-limiter.replenishRate: 10
+                redis-rate-limiter.burstCapacity: 15
+                redis-rate-limiter.requestedTokens: 1
+            - name: Retry
+              args:
+                retries: 2
+                methods: POST
+                backoff:
+                  firstBackoff: 50ms
+                  maxBackoff: 500ms
+                  factor: 2
+                  basedOnPreviousValue: true
+
+        # User Service - Login (Public - Strict Rate Limiting)
+        # Pattern: /api/v1/users/auth/login
+        - id: user-service-auth-login
+          uri: ${USER_SERVICE_URL:http://localhost:8081}
+          predicates:
+            - Path=/api/v1/users/auth/login
+          filters:
+            - StripPrefix=3
+            - name: CircuitBreaker
+              args:
+                name: userServiceCircuitBreaker
+                fallbackUri: forward:/fallback/user-service
+            - name: RequestRateLimiter
+              args:
+                key-resolver: "#{@smartKeyResolver}"
+                redis-rate-limiter.replenishRate: 5
+                redis-rate-limiter.burstCapacity: 10
+                redis-rate-limiter.requestedTokens: 1
+            - name: Retry
+              args:
+                retries: 1
+                methods: POST
+                backoff:
+                  firstBackoff: 100ms
+                  maxBackoff: 500ms
+                  factor: 2
+                  basedOnPreviousValue: true
+
+        # User Service - Setup Password (Public - Very Strict Rate Limiting)
+        # Pattern: /api/v1/users/auth/setup-password
+        - id: user-service-auth-setup
+          uri: ${USER_SERVICE_URL:http://localhost:8081}
+          predicates:
+            - Path=/api/v1/users/auth/setup-password
+          filters:
+            - StripPrefix=3
+            - name: CircuitBreaker
+              args:
+                name: userServiceCircuitBreaker
+                fallbackUri: forward:/fallback/user-service
+            - name: RequestRateLimiter
+              args:
+                key-resolver: "#{@smartKeyResolver}"
+                redis-rate-limiter.replenishRate: 3
+                redis-rate-limiter.burstCapacity: 5
+                redis-rate-limiter.requestedTokens: 1
+            - name: Retry
+              args:
+                retries: 1
+                methods: POST
+                backoff:
+                  firstBackoff: 100ms
+                  maxBackoff: 500ms
+                  factor: 2
+                  basedOnPreviousValue: true
+
+        # User Service - Other Public Auth Routes (Moderate Rate Limiting)
+        # Pattern: /api/v1/users/auth/** (catch-all for other auth endpoints)
         - id: user-service-public
           uri: ${USER_SERVICE_URL:http://localhost:8081}
           predicates:
@@ -35,6 +118,12 @@ spring:
               args:
                 name: userServiceCircuitBreaker
                 fallbackUri: forward:/fallback/user-service
+            - name: RequestRateLimiter
+              args:
+                key-resolver: "#{@smartKeyResolver}"
+                redis-rate-limiter.replenishRate: 20
+                redis-rate-limiter.burstCapacity: 30
+                redis-rate-limiter.requestedTokens: 1
             - name: Retry
               args:
                 retries: 3
@@ -94,6 +183,33 @@ spring:
             - name: Retry
               args:
                 retries: 3
+                methods: GET
+                backoff:
+                  firstBackoff: 50ms
+                  maxBackoff: 500ms
+
+        # Contact Service - Find by Value (Internal - Strict Rate Limiting)
+        # Pattern: /api/v1/contacts/find-by-value
+        # Used by User Service for authentication - Should only accept internal calls
+        - id: contact-service-find-by-value
+          uri: ${CONTACT_SERVICE_URL:http://localhost:8082}
+          predicates:
+            - Path=/api/v1/contacts/find-by-value
+          filters:
+            - StripPrefix=3
+            - name: CircuitBreaker
+              args:
+                name: contactServiceCircuitBreaker
+                fallbackUri: forward:/fallback/contact-service
+            - name: RequestRateLimiter
+              args:
+                key-resolver: "#{@smartKeyResolver}"
+                redis-rate-limiter.replenishRate: 5
+                redis-rate-limiter.burstCapacity: 10
+                redis-rate-limiter.requestedTokens: 1
+            - name: Retry
+              args:
+                retries: 2
                 methods: GET
                 backoff:
                   firstBackoff: 50ms
