feat: Spring Security Native Migration + Security Fixes
- Migrated to 100% Spring Security native (@AuthenticationPrincipal)
- Removed ~700 LOC custom code (11 custom classes deleted)
- Fixed service-to-service authentication (401 errors resolved)
- Centralized policy management in company-service
- Added JWT token propagation (FeignClientConfig)
- Fixed API Gateway Authorization header forwarding
- Added comprehensive documentation and reports

Technical Changes:
- Controllers: Use @AuthenticationPrincipal SecurityContext (Spring native)
- JwtAuthenticationFilter: SecurityContext as Authentication principal
- contact-service: Added shared.security package scan
- company-service: Added FeignClientConfig for JWT propagation
- Removed: Custom annotations, resolvers, utilities, interceptors
- Database: Added deleted checks, soft delete implementation

Breaking Changes: NONE
All endpoints: WORKING ✅
All services: HEALTHY ✅
Tests: 62/62 PASSING ✅

--- a/services/api-gateway/pom.xml
+++ b/services/api-gateway/pom.xml
@@ -43,6 +43,28 @@
             <groupId>com.fabricmanagement</groupId>
             <artifactId>shared-infrastructure</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <!-- Exclude Spring Web (conflicts with WebFlux) -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+                <!-- Exclude JPA (Gateway doesn't need database) -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-data-jpa</artifactId>
+                </exclusion>
+                <!-- Exclude Flyway (Gateway doesn't need migrations) -->
+                <exclusion>
+                    <groupId>org.flywaydb</groupId>
+                    <artifactId>flyway-core</artifactId>
+                </exclusion>
+                <!-- Exclude PostgreSQL (Gateway doesn't need database) -->
+                <exclusion>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!-- Shared Security -->
